[ISSUE-3176] Support running IoTDB CI on JDK16 (#3177)